Safepoint logging has mismatch between command line level and printed level

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b115

      -Xlog:safepoint=trace reveals "debug"-level logging that -Xlog:safepoint=debug does not. Probably due to a mismatch between an if statement and a logging statement in the source code.

            Assignee:
            Rachel Protacio (Inactive)
            Reporter:
            Rachel Protacio (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: