8151560: Safepoint logging has mismatch between command line level and printed level

Corrected mistaken "debug" level to "trace"

Reviewed-by: hseigel, jiangli, dholmes