hotspot/src/share/vm/runtime/safepoint.cpp
@@ -222,7 +222,7 @@ void SafepointSynchronize::begin() {
         }
         if (log_is_enabled(Trace, safepoint)) {
           ResourceMark rm;
-          cur_state->print_on(LogHandle(safepoint)::debug_stream());
+          cur_state->print_on(LogHandle(safepoint)::trace_stream());
         }
       }
     }
